part_3/src/bin/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGrammar.y
-----------------------------------------------------------------------------

state 132 contains 2 shift/reduce conflicts.
state 229 contains 1 shift/reduce conflicts.
state 231 contains 4 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	Double -> L_doubl                                  (3)
	Char -> L_charac                                   (4)
	String -> L_quoted                                 (5)
	BeginKW -> 'begin'                                 (6)
	EndKW -> 'end'                                     (7)
	ProgramKW -> 'program'                             (8)
	FunctionKW -> 'function'                           (9)
	ProcedureKW -> 'procedure'                         (10)
	VarKW -> 'var'                                     (11)
	ConstKW -> 'const'                                 (12)
	IfKW -> 'if'                                       (13)
	ThenKW -> 'then'                                   (14)
	ElseKW -> 'else'                                   (15)
	WhileKW -> 'while'                                 (16)
	ForKW -> 'for'                                     (17)
	ToKW -> 'to'                                       (18)
	DoKW -> 'do'                                       (19)
	RepeatKW -> 'repeat'                               (20)
	UntilKW -> 'until'                                 (21)
	IntKW -> 'integer'                                 (22)
	RealKW -> 'real'                                   (23)
	CharKW -> 'char'                                   (24)
	BoolKW -> 'boolean'                                (25)
	StringKW -> 'string'                               (26)
	ArrayKW -> 'array'                                 (27)
	Program -> ProgramKW Ident ';' InnerBlockWithDecl '.'   (28)
	InnerBlockWithDecl -> ListDeclaration InnerBlockExec   (29)
	ListDeclaration ->                                 (30)
	ListDeclaration -> ListDeclaration Declaration     (31)
	InnerBlockExec -> BeginKW NonMandatoryTerminator ListStatement EndKW   (32)
	ListStatement ->                                   (33)
	ListStatement -> Statement                         (34)
	ListStatement -> Statement ';' ListStatement       (35)
	NonMandatoryTerminator ->                          (36)
	NonMandatoryTerminator -> ';'                      (37)
	Declaration -> CostantsBlock                       (38)
	Declaration -> VariablesBlock                      (39)
	Declaration -> FunctionDecl                        (40)
	Declaration -> ProcedureDecl                       (41)
	CostantsBlock -> ConstKW ListConstantDecl          (42)
	ListConstantDecl -> ConstantDecl ';'               (43)
	ListConstantDecl -> ConstantDecl ';' ListConstantDecl   (44)
	ConstantDecl -> Ident '=' RightExp                 (45)
	VariablesBlock -> VarKW ListVariableDeclBlock      (46)
	ListVariableDeclBlock -> VariableDeclBlock ';'     (47)
	ListVariableDeclBlock -> VariableDeclBlock ';' ListVariableDeclBlock   (48)
	ListVariableDeclFunc ->                            (49)
	ListVariableDeclFunc -> VariableDeclFunc           (50)
	ListVariableDeclFunc -> VariableDeclFunc ';' ListVariableDeclFunc   (51)
	VariableDeclBlock -> ListIdent ':' Type InitAssign   (52)
	InitAssign ->                                      (53)
	InitAssign -> '=' RightExp                         (54)
	DeclarationFunc ->                                 (55)
	DeclarationFunc -> '(' ListVariableDeclFunc ')'    (56)
	VariableDeclFunc -> ListIdent ':' Type             (57)
	ListIdent -> Ident                                 (58)
	ListIdent -> Ident ',' ListIdent                   (59)
	FunctionDecl -> FunctionKW Ident DeclarationFunc ':' Type ';' InnerBlockWithDecl ';'   (60)
	ProcedureDecl -> ProcedureKW Ident DeclarationFunc ';' InnerBlockWithDecl ';'   (61)
	FunctionCall -> Ident '(' ListRightExp ')'         (62)
	ProcedureCall -> Ident '(' ListRightExp ')'        (63)
	ListRightExp ->                                    (64)
	ListRightExp -> RightExp                           (65)
	ListRightExp -> RightExp ',' ListRightExp          (66)
	Statement -> InnerBlockExec                        (67)
	Statement -> IfKW RightExp ThenKW Statement ElseBlock   (68)
	Statement -> ForKW Assign ToKW RightExp DoKW Statement   (69)
	Statement -> WhileKW RightExp DoKW Statement       (70)
	Statement -> RepeatKW ListStatement UntilKW RightExp   (71)
	Statement -> Assign                                (72)
	Statement -> FunctionCall                          (73)
	Statement -> ProcedureCall                         (74)
	Statement -> WritePrimitive                        (75)
	Statement -> ReadPrimitive                         (76)
	ElseBlock ->                                       (77)
	ElseBlock -> ElseKW Statement                      (78)
	Assign -> LeftExp ':=' RightExp                    (79)
	RightExp -> RightExp1                              (80)
	RightExp -> RightExp 'or' RightExp1                (81)
	RightExp1 -> RightExp2                             (82)
	RightExp1 -> RightExp1 'and' RightExp2             (83)
	RightExp2 -> RightExp3                             (84)
	RightExp2 -> RightExp2 '>' RightExp3               (85)
	RightExp2 -> RightExp2 '<' RightExp3               (86)
	RightExp2 -> RightExp2 '>=' RightExp3              (87)
	RightExp2 -> RightExp2 '<=' RightExp3              (88)
	RightExp2 -> RightExp2 '=' RightExp3               (89)
	RightExp3 -> RightExp4                             (90)
	RightExp3 -> RightExp3 '+' RightExp4               (91)
	RightExp3 -> RightExp3 '-' RightExp4               (92)
	RightExp4 -> RightExp5                             (93)
	RightExp4 -> RightExp4 '*' RightExp5               (94)
	RightExp4 -> RightExp4 '/' RightExp5               (95)
	RightExp4 -> RightExp4 'mod' RightExp5             (96)
	RightExp4 -> RightExp4 'div' RightExp5             (97)
	RightExp5 -> RightExp6                             (98)
	RightExp5 -> RightExp5 '**' RightExp6              (99)
	RightExp6 -> RightExp7                             (100)
	RightExp6 -> 'not' RightExp7                       (101)
	RightExp6 -> '-' RightExp7                         (102)
	RightExp6 -> '+' RightExp7                         (103)
	RightExp7 -> '(' RightExp ')'                      (104)
	RightExp7 -> Integer                               (105)
	RightExp7 -> Double                                (106)
	RightExp7 -> Boolean                               (107)
	RightExp7 -> Char                                  (108)
	RightExp7 -> String                                (109)
	RightExp7 -> FunctionCall                          (110)
	RightExp7 -> LeftExp                               (111)
	LeftExp -> Ident                                   (112)
	LeftExp -> LeftExp '[' ListRightExp ']'            (113)
	LeftExp -> LeftExp '^'                             (114)
	LeftExp -> '@' LeftExp                             (115)
	Type -> BaseType                                   (116)
	Type -> CompositeType                              (117)
	BaseType -> IntKW                                  (118)
	BaseType -> RealKW                                 (119)
	BaseType -> CharKW                                 (120)
	BaseType -> BoolKW                                 (121)
	BaseType -> StringKW                               (122)
	Boolean -> 'true'                                  (123)
	Boolean -> 'false'                                 (124)
	CompositeType -> ArrayKW '[' ListArrayDeclarationDim ']' 'of' BaseType   (125)
	CompositeType -> '^' Type                          (126)
	ListArrayDeclarationDim ->                         (127)
	ListArrayDeclarationDim -> ArrayDeclarationDim     (128)
	ListArrayDeclarationDim -> ArrayDeclarationDim ',' ListArrayDeclarationDim   (129)
	ArrayDeclarationDim -> RightExp '..' RightExp      (130)
	WritePrimitive -> 'writeInt' '(' RightExp ')'      (131)
	WritePrimitive -> 'writeReal' '(' RightExp ')'     (132)
	WritePrimitive -> 'writeChar' '(' RightExp ')'     (133)
	WritePrimitive -> 'writeString' '(' RightExp ')'   (134)
	ReadPrimitive -> 'readInt' '(' LeftExp ')'         (135)
	ReadPrimitive -> 'readReal' '(' LeftExp ')'        (136)
	ReadPrimitive -> 'readChar' '(' LeftExp ')'        (137)
	ReadPrimitive -> 'readString' '(' LeftExp ')'      (138)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'**'           { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'-'            { PT _ (TS _ 7) }
	'.'            { PT _ (TS _ 8) }
	'..'           { PT _ (TS _ 9) }
	'/'            { PT _ (TS _ 10) }
	':'            { PT _ (TS _ 11) }
	':='           { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'@'            { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'^'            { PT _ (TS _ 22) }
	'and'          { PT _ (TS _ 23) }
	'array'        { PT _ (TS _ 24) }
	'begin'        { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'char'         { PT _ (TS _ 27) }
	'const'        { PT _ (TS _ 28) }
	'div'          { PT _ (TS _ 29) }
	'do'           { PT _ (TS _ 30) }
	'else'         { PT _ (TS _ 31) }
	'end'          { PT _ (TS _ 32) }
	'false'        { PT _ (TS _ 33) }
	'for'          { PT _ (TS _ 34) }
	'function'     { PT _ (TS _ 35) }
	'if'           { PT _ (TS _ 36) }
	'integer'      { PT _ (TS _ 37) }
	'mod'          { PT _ (TS _ 38) }
	'not'          { PT _ (TS _ 39) }
	'of'           { PT _ (TS _ 40) }
	'or'           { PT _ (TS _ 41) }
	'procedure'    { PT _ (TS _ 42) }
	'program'      { PT _ (TS _ 43) }
	'readChar'     { PT _ (TS _ 44) }
	'readInt'      { PT _ (TS _ 45) }
	'readReal'     { PT _ (TS _ 46) }
	'readString'   { PT _ (TS _ 47) }
	'real'         { PT _ (TS _ 48) }
	'repeat'       { PT _ (TS _ 49) }
	'string'       { PT _ (TS _ 50) }
	'then'         { PT _ (TS _ 51) }
	'to'           { PT _ (TS _ 52) }
	'true'         { PT _ (TS _ 53) }
	'until'        { PT _ (TS _ 54) }
	'var'          { PT _ (TS _ 55) }
	'while'        { PT _ (TS _ 56) }
	'writeChar'    { PT _ (TS _ 57) }
	'writeInt'     { PT _ (TS _ 58) }
	'writeReal'    { PT _ (TS _ 59) }
	'writeString'  { PT _ (TS _ 60) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	Double          rule  3
	Char            rule  4
	String          rule  5
	BeginKW         rule  6
	EndKW           rule  7
	ProgramKW       rule  8
	FunctionKW      rule  9
	ProcedureKW     rule  10
	VarKW           rule  11
	ConstKW         rule  12
	IfKW            rule  13
	ThenKW          rule  14
	ElseKW          rule  15
	WhileKW         rule  16
	ForKW           rule  17
	ToKW            rule  18
	DoKW            rule  19
	RepeatKW        rule  20
	UntilKW         rule  21
	IntKW           rule  22
	RealKW          rule  23
	CharKW          rule  24
	BoolKW          rule  25
	StringKW        rule  26
	ArrayKW         rule  27
	Program         rule  28
	InnerBlockWithDecl rule  29
	ListDeclaration rules 30, 31
	InnerBlockExec  rule  32
	ListStatement   rules 33, 34, 35
	NonMandatoryTerminator rules 36, 37
	Declaration     rules 38, 39, 40, 41
	CostantsBlock   rule  42
	ListConstantDecl rules 43, 44
	ConstantDecl    rule  45
	VariablesBlock  rule  46
	ListVariableDeclBlock rules 47, 48
	ListVariableDeclFunc rules 49, 50, 51
	VariableDeclBlock rule  52
	InitAssign      rules 53, 54
	DeclarationFunc rules 55, 56
	VariableDeclFunc rule  57
	ListIdent       rules 58, 59
	FunctionDecl    rule  60
	ProcedureDecl   rule  61
	FunctionCall    rule  62
	ProcedureCall   rule  63
	ListRightExp    rules 64, 65, 66
	Statement       rules 67, 68, 69, 70, 71, 72, 73, 74, 75, 76
	ElseBlock       rules 77, 78
	Assign          rule  79
	RightExp        rules 80, 81
	RightExp1       rules 82, 83
	RightExp2       rules 84, 85, 86, 87, 88, 89
	RightExp3       rules 90, 91, 92
	RightExp4       rules 93, 94, 95, 96, 97
	RightExp5       rules 98, 99
	RightExp6       rules 100, 101, 102, 103
	RightExp7       rules 104, 105, 106, 107, 108, 109, 110, 111
	LeftExp         rules 112, 113, 114, 115
	Type            rules 116, 117
	BaseType        rules 118, 119, 120, 121, 122
	Boolean         rules 123, 124
	CompositeType   rules 125, 126
	ListArrayDeclarationDim rules 127, 128, 129
	ArrayDeclarationDim rule  130
	WritePrimitive  rules 131, 132, 133, 134
	ReadPrimitive   rules 135, 136, 137, 138

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'program'      shift, and enter state 5

	ProgramKW      goto state 3
	Program        goto state 4

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'**'           reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'and'          reduce using rule 1
	'div'          reduce using rule 1
	'do'           reduce using rule 1
	'else'         reduce using rule 1
	'end'          reduce using rule 1
	'mod'          reduce using rule 1
	'or'           reduce using rule 1
	'then'         reduce using rule 1
	'to'           reduce using rule 1
	'until'        reduce using rule 1


State 3

	Program -> ProgramKW . Ident ';' InnerBlockWithDecl '.'    (rule 28)

	L_ident        shift, and enter state 2

	Ident          goto state 6

State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ProgramKW -> 'program' .                            (rule 8)

	L_ident        reduce using rule 8


State 6

	Program -> ProgramKW Ident . ';' InnerBlockWithDecl '.'    (rule 28)

	';'            shift, and enter state 7


State 7

	Program -> ProgramKW Ident ';' . InnerBlockWithDecl '.'    (rule 28)

	'begin'        reduce using rule 30
	'const'        reduce using rule 30
	'function'     reduce using rule 30
	'procedure'    reduce using rule 30
	'var'          reduce using rule 30

	InnerBlockWithDeclgoto state 8
	ListDeclarationgoto state 9

State 8

	Program -> ProgramKW Ident ';' InnerBlockWithDecl . '.'    (rule 28)

	'.'            shift, and enter state 26


State 9

	InnerBlockWithDecl -> ListDeclaration . InnerBlockExec    (rule 29)
	ListDeclaration -> ListDeclaration . Declaration    (rule 31)

	'begin'        shift, and enter state 21
	'const'        shift, and enter state 22
	'function'     shift, and enter state 23
	'procedure'    shift, and enter state 24
	'var'          shift, and enter state 25

	BeginKW        goto state 10
	FunctionKW     goto state 11
	ProcedureKW    goto state 12
	VarKW          goto state 13
	ConstKW        goto state 14
	InnerBlockExec goto state 15
	Declaration    goto state 16
	CostantsBlock  goto state 17
	VariablesBlock goto state 18
	FunctionDecl   goto state 19
	ProcedureDecl  goto state 20

State 10

	InnerBlockExec -> BeginKW . NonMandatoryTerminator ListStatement EndKW    (rule 32)
